# skills-tools-project

./: .gitignore  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
graph/: devgraph.py  state.py  workflow.py
mcpServer/: __init__.py  server.py  tools_cars.py  tools_emails.py
services/: gemini_service.py  sheets_service.py
skills/: __init__.py  clients_skill.py  marketing_skill.py  prompt_loader.py
skills/prompts/: marketing.md
